managedscheduledapex-app/objects/MonitoredActivity__c/MonitoredActivity__c.object-meta.xml
<CustomObject>
    <description>Wrapper object for monitoring tasks and events, since we cannot create e-mail alerts based directly on tasks.</description>
    <label>Monitored Activity</label>
    <nameField>
        <displayFormat>MTA-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Monitored Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitored Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>