managedscheduledapex-app/objects/MonitoredActivity__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When created this is the current date.  After the injection is complete it is set to tomorrow&apos;s date.</description>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>