managedscheduledapex-app/objects/MonitoredActivity__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>This is the job Id for this activity.</description>
    <externalId>true</externalId>
    <label>AsyncApexJobId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>