managedscheduledapex-app/objects/MonitoredActivity__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>Activity Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>