managedscheduledapex-app/objects/MonitoredActivity__c/fields/SkippedCount__c.field-meta.xml
<CustomField>
    <fullName>SkippedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this job has been skipped in a row for a higher priority job.</description>
    <label>Skipped Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>