managedscheduledapex-app/objects/MonitoredActivity__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The task subject.</description>
    <inlineHelpText>The task subject.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>