managedscheduledapex-app/objects/MonitoredActivity__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+TaskId__c,TaskId__c,&apos;_top&apos;)</formula>
    <label>Task</label>
    <type>Text</type>
</CustomField>