managedscheduledapex-app/objects/MonitoredActivity__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <description>This is the Task Id to monitor.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Task Id to monitor.</inlineHelpText>
    <label>TaskId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>